@@ -19,6 +19,11 @@
 ;dateformat=%F %T       ; ISO 8601 date format
 ;dateformat=%F %T.%3q   ; with milliseconds
 ;
+;
+; This makes Asterisk write callids to log messages
+; (defaults to yes)
+;use_callids = no
+;
 ; This appends the hostname to the name of the log files.
 ;appendhostname = yes
 ;
